--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     <button id ="onionRingsButton">Onion Rings </button>
     <button id="endGameButon"> End Game</button>
    <!----each button has an id that will have an event clicker in javascript file  -->
+<!----the project requires using flex box, so that will be modeled here  -->
+<div class="flex-container">
+<div class="greenBox">French Fries</div>
+<div class="greenBox">Hamburger</div>
+<div class="greenBox">Salad</div>
+<div class="greenBox">Onion Rings</div>
 
+
+
+
+
+</div>
+<!----add the javascript file to html-->
+<script src="script.js"></script>
 </body>
 </html>
