--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!----title of game -->
-    <h1> Hungry ? </h1>
+    <h1> Hunger Plays ? </h1>
     <!----title of game -->
     <h2> Click the a button to guess what the Robot wants. You win , if you guess correct. You loose , try again.</h2>
   <!----These are the buttons that the player will select on the page  -->
@@ -23,12 +23,15 @@
 <div class="greenBox">Hamburger</div>
 <div class="greenBox">Salad</div>
 <div class="greenBox">Onion Rings</div>
-
-
-
-
-
+<!----ending div of flex container -->
 </div>
+<!----creating a div for the computer output-->
+
+<div id="computer1"> Lunch Robot Wants?</div>
+
+<!----adding the robot picture to give a visual effect of game -->
+<div class="stick2" id="robotFood"> </div>
+<img class="stick2" src="https://static.tvtropes.org/pmwiki/pub/images/gir-eating-junk-food_1084.jpg" alt="Robot">
 <!----add the javascript file to html-->
 <script src="script.js"></script>
 </body>
