--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry?</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <!----title of game -->
@@ -45,6 +46,7 @@
 <div class="stick2" id="robotFood"> </div>
 <img class="stick2" src="https://static.tvtropes.org/pmwiki/pub/images/gir-eating-junk-food_1084.jpg" alt="Robot">
 <!----add the javascript file to html-->
+
 <script src="script.js"></script>
 
 </body>
