--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="hamburgerButton"> Hamburger </button>
     <button id="saladButton">  Salad </button>
     <button id ="onionRingsButton">Onion Rings </button>
-    <button id="endGameButon"> End Game</button>
+    <button id="endGameButon" onClick="reload" > End Game</button>
    <!----each button has an id that will have an event clicker in javascript file  -->
 <!----the project requires using flex box, so that will be modeled here  -->
 <div class="flex-container">
