--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!----title of game -->
     <h1> Hunger Plays ? </h1>
     <!----Instructions for the game header -->
-    <h2> Click the a button to guess what the Robot wants. You win , if you guess correct. You loose , try again.</h2>
+    <h2> Instructions : Click the  button to guess what the Robot wants. You win , if you guess correct. You loose , try again.</h2>
   <!----These are the buttons that the player will select on the page  -->
     <button id ="crunchy1Button"> French Fries </button>
     <button id="hamburgerButton"> Hamburger </button>
     <button id="saladButton">  Salad </button>
     <button id ="onionRingsButton">Onion Rings </button>
-    <button id="endGameButon" onClick="reload" > End Game</button>
+    <button  onClick="window.location.reload();"> End Game</button>
    <!----each button has an id that will have an event clicker in javascript file  -->
 <!----the project requires using flex box, so that will be modeled here  -->
 <div class="flex-container">
